tests/snapshots/line_numbers_tests__line_numbers_with_char_wrap.snap
---
source: tests/line_numbers_tests.rs
expression: output
---
───────────────────────────────────────────────────────────────────────────────
     product    │ description                                                 
───┬────────────┬──────────────────────────────────────────────────────────────
1  │ Laptop     │ A high-performance laptop with 16GB RAM, 512GB SSD storage, 
   │            │ and a powerful Intel Core i7 processor for professional work
   │            │  and gaming.                                                
2  │ Smartphone │ The latest smartphone featuring a stunning 6.5-inch OLED dis
   │            │ play, triple camera system, and all-day battery life.       
3  │ Headphones │ Premium wireless noise-cancelling headphones with exceptiona
   │            │ l sound quality and comfortable over-ear design.
