tests/snapshots/line_numbers_tests__with_line_numbers_short_flag.snap
---
source: tests/line_numbers_tests.rs
expression: output
---
───────────────────────────────────────────────────────────────────────────────
     name    │ age │ city                                                     
───┬─────────┬─────┬───────────────────────────────────────────────────────────
1  │ Alice   │ 30  │ New York                                                 
2  │ Bob     │ 25  │ Los Angeles                                              
3  │ Charlie │ 35  │ Chicago
