tests/snapshots/line_numbers_tests__without_line_numbers.snap
---
source: tests/line_numbers_tests.rs
expression: output
---
────────────────────────────────────────────────────────────────────────────────
 name    │ age │ city                                                          │
─────────┬─────┬───────────────────────────────────────────────────────────────┬
 Alice   │ 30  │ New York                                                      │
 Bob     │ 25  │ Los Angeles                                                   │
 Charlie │ 35  │ Chicago                                                       │
